@@ -30,7 +30,7 @@ depends: [
   "ocamlfind"
   "re"
   "cmdliner"
-  "ipaddr" {>= "2.2.0"}
+  "ipaddr" {>= "2.6.0"}
   "base64" {>= "2.0.0"}
   "ounit"
   "pcap-format" {test}
